--- a/cmake/PangolinConfig.cmake.in
+++ b/cmake/PangolinConfig.cmake.in
@@ -11,7 +11,7 @@ SET( Pangolin_LIBRARIES    @component_list@ )
 SET( Pangolin_LIBRARY      "${Pangolin_LIBRARIES}" )
 
 include(CMakeFindDependencyMacro)
-find_dependency(Eigen)
+find_dependency(Eigen3)
 
 if (UNIX)
   find_dependency(Threads)
